--- a/cfg/aim.cfg
+++ b/cfg/aim.cfg
@@ -4,6 +4,18 @@ ammo_grenade_limit_total 0
 mp_round_restart_delay 2
 mp_freezetime 0
 mp_buytime 0
+mp_maxrounds 999999
+mp_roundtime 60
+mp_roundtime_defuse 60
+mp_roundtime_hostage 60
+sv_infinite_ammo 2
 bot_kick
 mp_warmup_end
 
+mp_ct_default_primary weapon_ak47
+mp_t_default_primary weapon_ak47
+mp_ct_default_secondary weapon_deagle
+mp_t_default_secondary weapon_deagle
+mp_free_armor 2
+
+mp_restartgame 1
